# guest-vm-sync-time-rtc

./: CMakeLists.txt  LICENSE  README.md  guest-vm-sync-time-with-rtc.service  main.c
.github/workflows/: main.yml
debian_files/: description  postinst  postrm  prerm
